--- a/addons/purchase/views/portal_templates.xml
+++ b/addons/purchase/views/portal_templates.xml
@@ -98,22 +98,31 @@
                 </div>
               </div>
               <t t-foreach="order.order_line" t-as="ol">
-                <div class="row purchases_vertical_align">
-                  <div class="col-lg-1 text-center">
-                      <img t-att-src="image_data_uri(resize_to_48(ol.product_id.image))" alt="Product"/>
-                  </div>
-                  <div id='product_name' class="col-lg-5">
-                    <span t-esc="ol.name"/>
-                  </div>
-                  <div class="col-lg-2 text-right">
-                    <span t-field="ol.price_unit" t-options='{"widget": "monetary", "display_currency": order.currency_id}'/>
-                  </div>
-                  <div class="col-lg-2 text-right">
-                      <span t-esc="ol.product_qty"/>
-                  </div>
-                  <div class="col-lg-2 text-right">
-                    <span t-field="ol.price_subtotal" t-options='{"widget": "monetary", "display_currency": order.currency_id}'/>
-                  </div>
+                <div t-att-class="'bg-200 font-weight-bold o_line_section' if ol.display_type == 'line_section' else 'font-italic o_line_note' if ol.display_type == 'line_note' else 'row purchases_vertical_align'">
+                  <t t-if="not ol.display_type">
+                    <td>
+                        <div class="col-lg-1 text-center">
+                            <img t-att-src="image_data_uri(resize_to_48(ol.product_id.image))" alt="Product"/>
+                        </div>
+                        <div id='product_name' class="col-lg-5">
+                          <span t-esc="ol.name"/>
+                        </div>
+                        <div class="col-lg-2 text-right">
+                          <span t-field="ol.price_unit" t-options='{"widget": "monetary", "display_currency": order.currency_id}'/>
+                        </div>
+                        <div class="col-lg-2 text-right">
+                            <span t-esc="ol.product_qty"/>
+                        </div>
+                        <div class="col-lg-2 text-right">
+                          <span t-field="ol.price_subtotal" t-options='{"widget": "monetary", "display_currency": order.currency_id}'/>
+                        </div>
+                    </td>
+                  </t>
+                  <t t-else="">
+                    <div class="mb8">
+                      <span t-field="ol.name"/>
+                    </div>
+                  </t>
                 </div>
               </t>
 
