--- a/addons/purchase/views/purchase_views.xml
+++ b/addons/purchase/views/purchase_views.xml
@@ -179,23 +179,42 @@
                     </group>
                     <notebook>
                         <page string="Products">
-                            <field name="order_line" attrs="{'readonly': [('state', 'in', ('done', 'cancel'))]}">
+                            <field name="order_line"
+                                   widget="section_and_note_one2many"
+                                   attrs="{'readonly': [('state', 'in', ('done', 'cancel'))]}">
                                  <tree string="Purchase Order Lines" editable="bottom">
+                                    <control>
+                                        <create name="add_product_control" string="Add a product"/>
+                                        <create name="add_section_control" string="Add a section" context="{'default_display_type': 'line_section'}"/>
+                                        <create name="add_note_control" string="Add a note" context="{'default_display_type': 'line_note'}"/>
+                                    </control>
+                                    <field name="display_type" invisible="1"/>
                                     <field name="currency_id" invisible="1"/>
                                     <field name="state" invisible="1"/>
                                     <field name="product_type" invisible="1"/>
                                     <field name="invoice_lines" invisible="1"/>
                                     <field name="sequence" widget="handle"/>
-                                    <field name="product_id" attrs="{'readonly': [('state', 'in', ('purchase', 'to approve','done', 'cancel'))]}" context="{'partner_id':parent.partner_id, 'quantity':product_qty,'uom':product_uom, 'company_id': parent.company_id}" force_save="1"/>
+                                    <field name="product_id"
+                                            attrs="{
+                                                'readonly': [('state', 'in', ('purchase', 'to approve','done', 'cancel'))],
+                                                'required': [('display_type', '=', False)],
+                                            }"
+                                           context="{'partner_id':parent.partner_id, 'quantity':product_qty,'uom':product_uom, 'company_id': parent.company_id}"
+                                           force_save="1"/>
                                     <field name="name"/>
-                                    <field name="date_planned"/>
+                                    <field name="date_planned" attrs="{'required': [('display_type', '=', False)]}" force_save="1"/>
                                     <field name="company_id" groups="base.group_multi_company" options="{'no_create': True}"/>
                                     <field name="account_analytic_id" context="{'default_partner_id':parent.partner_id}" groups="analytic.group_analytic_accounting"/>
                                     <field name="analytic_tag_ids" groups="analytic.group_analytic_tags" widget="many2many_tags" options="{'color_field': 'color'}"/>
                                     <field name="product_qty"/>
                                     <field name="qty_received" attrs="{'column_invisible': [('parent.state', 'not in', ('purchase', 'done'))]}"/>
                                     <field name="qty_invoiced" attrs="{'column_invisible': [('parent.state', 'not in', ('purchase', 'done'))]}"/>
-                                    <field name="product_uom" groups="uom.group_uom" attrs="{'readonly': [('state', 'in', ('purchase', 'done', 'cancel'))]}" force_save="1"/>
+                                    <field name="product_uom" groups="uom.group_uom"
+                                            attrs="{
+                                                'readonly': [('state', 'in', ('purchase', 'done', 'cancel'))],
+                                                'required': [('display_type', '=', False)]
+                                            }"
+                                           force_save="1"/>
                                     <field name="price_unit" attrs="{'readonly': [('invoice_lines', '!=', [])]}"/>
                                     <field name="taxes_id" widget="many2many_tags" domain="[('type_tax_use','=','purchase')]" context="{'default_type_tax_use': 'purchase', 'search_view_ref': 'account.account_tax_view_search'}" options="{'no_create': True}"/>
                                     <field name="price_subtotal" widget="monetary"/>
@@ -203,21 +222,26 @@
                                 <form string="Purchase Order Line">
                                     <sheet>
                                         <field name="state" invisible="1"/>
-                                        <group>
+                                        <field name="display_type" invisible="1"/>
+                                        <group attrs="{'invisible': [('display_type', '!=', False)]}">
                                             <group>
                                                 <field name="product_id"
+                                                       attrs="{'required': [('display_type', '=', False)]}"
                                                        context="{'partner_id': parent.partner_id}"/>
                                                 <label for="product_qty"/>
                                                 <div>
                                                     <field name="product_qty" class="oe_inline"/>
                                                     <span class="oe_inline">&#160;</span>
-                                                    <field name="product_uom" groups="uom.group_uom" class="oe_inline"/>
+                                                    <field name="product_uom"
+                                                           groups="uom.group_uom"
+                                                           attrs="{'required': [('display_type', '=', False)]}"
+                                                           class="oe_inline"/>
                                                 </div>
                                                 <field name="price_unit"/>
                                             </group>
                                             <group>
                                                 <field name="taxes_id" widget="many2many_tags" domain="[('type_tax_use', '=', 'purchase')]" options="{'no_create': True}"/>
-                                                <field name="date_planned" widget="date"/>
+                                                <field name="date_planned" attrs="{'required': [('display_type', '=', False)]}" widget="date"/>
                                                 <field name="account_analytic_id" colspan="2" groups="analytic.group_analytic_accounting"/>
                                                 <field name="analytic_tag_ids" groups="analytic.group_analytic_tags" widget="many2many_tags" options="{'color_field': 'color'}"/>
                                                 <field name="company_id" groups="base.group_multi_company" options="{'no_create': True}"/>
@@ -232,6 +256,9 @@
                                         </page>
                                         </notebook>
                                     </sheet>
+                                    <label for="name" string="Section Name (eg. Products, Services)" attrs="{'invisible': [('display_type', '!=', 'line_section')]}"/>
+                                    <label for="name" string="Note" attrs="{'invisible': [('display_type', '!=', 'line_note')]}"/>
+                                    <field name="name" nolabel="1"  attrs="{'invisible': [('display_type', '=', False)]}"/>
                                 </form>
                             </field>
                             <group class="oe_subtotal_footer oe_right">
