--- a/addons/purchase/report/purchase_order_templates.xml
+++ b/addons/purchase/report/purchase_order_templates.xml
@@ -52,37 +52,28 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <t t-foreach="o.order_line" t-as="line">
-                        <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.display_type == 'line_section' else 'font-italic o_line_note' if line.display_type == 'line_note' else ''">
-                            <t t-if="not line.display_type">
-                                <td class="purchase_order_line_name">
-                                    <span t-field="line.name"/>
-                                </td>
-                                <td class="purchase_order_line_taxes_id">
-                                    <span t-esc="', '.join(map(lambda x: x.name, line.taxes_id))"/>
-                                </td>
-                                <td class="text-center purchase_order_line_date_planned">
-                                    <span t-field="line.date_planned"/>
-                                </td>
-                                <td class="text-right purchase_order_line_product_qty">
-                                    <span t-field="line.product_qty"/>
-                                    <span t-field="line.product_uom.name" groups="uom.group_uom"/>
-                                </td>
-                                <td class="text-right purchase_order_line_price_unit">
-                                    <span t-field="line.price_unit"/>
-                                </td>
-                                <td class="text-right purchase_order_line_price_subtotal">
-                                    <span t-field="line.price_subtotal"
-                                        t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                                </td>
-                            </t>
-                            <t t-else="">
-                                <td colspan="99" id="section">
-                                    <span t-field="line.name"/>
-                                </td>
-                            </t>
-                        </tr>
-                    </t>
+                    <tr t-foreach="o.order_line" t-as="line">
+                        <td class="purchase_order_line_name">
+                            <span t-field="line.name"/>
+                        </td>
+                        <td class="purchase_order_line_taxes_id">
+                            <span t-esc="', '.join(map(lambda x: x.name, line.taxes_id))"/>
+                        </td>
+                        <td class="text-center purchase_order_line_date_planned">
+                            <span t-field="line.date_planned"/>
+                        </td>
+                        <td class="text-right purchase_order_line_product_qty">
+                            <span t-field="line.product_qty"/>
+                            <span t-field="line.product_uom.name" groups="uom.group_uom"/>
+                        </td>
+                        <td class="text-right purchase_order_line_price_unit">
+                            <span t-field="line.price_unit"/>
+                        </td>
+                        <td class="text-right purchase_order_line_price_subtotal">
+                            <span t-field="line.price_subtotal"
+                                t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
 
