--- a/addons/purchase/report/purchase_quotation_templates.xml
+++ b/addons/purchase/report/purchase_quotation_templates.xml
@@ -29,27 +29,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <t t-foreach="o.order_line" t-as="order_line">
-                        <tr t-att-class="'bg-200 font-weight-bold o_line_section' if order_line.display_type == 'line_section' else 'font-italic o_line_note' if order_line.display_type == 'line_note' else ''">
-                            <t t-if="not order_line.display_type">
-                                <td>
-                                    <span t-field="order_line.name"/>
-                                </td>
-                                <td class="text-center">
-                                    <span t-field="order_line.date_planned"/>
-                                </td>
-                                <td class="text-right purchase_order_line_product_qty">
-                                    <span t-field="order_line.product_qty"/>
-                                    <span t-field="order_line.product_uom" groups="uom.group_uom"/>
-                                </td>
-                            </t>
-                            <t t-else="">
-                                <td colspan="99" id="section">
-                                    <span t-field="order_line.name"/>
-                                </td>
-                            </t>
-                        </tr>
-                    </t>
+                    <tr t-foreach="o.order_line" t-as="order_line">
+                        <td>
+                            <span t-field="order_line.name"/>
+                        </td>
+                        <td class="text-center">
+                            <span t-field="order_line.date_planned"/>
+                        </td>
+                        <td class="text-right purchase_order_line_product_qty">
+                            <span t-field="order_line.product_qty"/>
+                            <span t-field="order_line.product_uom" groups="uom.group_uom"/>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
 
